tests/snapshots/test_runner__tests__compiler__typecheck__single_dispatch_5.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do true.foo().print()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/single_dispatch_5.kk:1:9
  │
1 │ do true.foo().print()
  │         ^^^ Unknown variable `foo`
  │
  = Cannot find this value symbol in the current scope
